--- a/desktopcss.css
+++ b/desktopcss.css
@@ -1,6 +1,6 @@
 /* PAGE */
 body {
-    font-family: "Raleway";
+    font-family: "Raleway", "calibri", "arial";
     margin: 0;
 }
 a {
@@ -37,19 +37,19 @@ a {
         
 }  
 .navperm1 {
-    color: #0868f8;
-    border-top: 3px solid #0868f8;
+    color: #0065FC;
+    border-top: 3px solid #0065FC;
 }     
 .navperm:hover {
-        color: #0868f8;  
-        border-top: 3px solid #0868f8;  
+        color: #0065FC;  
+        border-top: 3px solid #0065FC;  
 }
 .inscription {
         display: flex;
         align-items: center;
         grid-area: button;
         padding: 32px;
-        color: #0868f8;
+        color: #0065FC;
         font-weight: 600;
 }
 
@@ -72,7 +72,7 @@ a {
         overflow: auto;
 }     
 .mapmaker {
-        background-color: #e9e9e9;
+        background-color: #F2F2F2;
         padding: 16px 20px;
         border-radius: 16px 0 0 16px;
         text-align: center;
@@ -83,8 +83,8 @@ a {
 .recherchemars {
         border-right: none;
         border-left: none;
-        border-top: #e9e9e9 1px solid;
-        border-bottom: #e9e9e9 1px solid;
+        border-top: #F2F2F2 1px solid;
+        border-bottom: #F2F2F2 1px solid;
         padding: 0 24px;
         box-sizing: border-box;
         width: 220px;
@@ -98,7 +98,7 @@ a {
         color: #00000059;
 }      
 .rechercheville {
-        background-color: #0868f8;
+        background-color: #0065FC;
         color: white;
         font-weight: bold;
         border: none;
@@ -129,7 +129,7 @@ a {
         display: flex;
         align-items: center;
         margin-right: 30px;
-        border: 2px solid #e9e9e9;
+        border: 2px solid #F2F2F2;
         border-radius: 30px;
         margin-bottom: 15px;
         cursor: pointer;
@@ -140,23 +140,22 @@ a {
         margin-right: 0;
 }
 .rechercheparfiltre:hover {
-        background-color: #f3f8ff;
+        background-color: #DEEBFF;
         transform: scale(1.015);
 }
 .iconrecherche {
-        background-color: #d9e6fa;
+        background-color: #DEEBFF;
         display: flex;
         align-items: center;
         justify-content: center;
         margin: -2px;
         border-radius: 100%;
-        min-height: 55px;
-        min-width: 55px;
-        height: 50px;
-        width: 50px;      
+        
+        height: 55px;
+        width: 55px;      
 }
 .iconz {
-        color: blue;
+        color: #0065FC;
 }
 .recherchetitre {
         margin: 0 15px;
@@ -171,7 +170,7 @@ a {
         width: 30px;
         min-height: 30px;
         min-width: 30px;
-        border: solid 1px #e9e9e9;
+        border: solid 1px #F2F2F2;
         border-radius: 100%;
         display: flex;
         align-items: center;
@@ -179,7 +178,7 @@ a {
         margin-right: 30px;
 }
 .iconz2 {
-        color: #0868f8;
+        color: #0065FC;
 }
 .TitreInfo {
         margin: 0;
@@ -191,7 +190,7 @@ a {
   grid-template-columns: 6fr 3fr;
 }
 .hebergementContain {
-        background-color: #e9e9e9;
+        background-color: #F2F2F2;
         border-radius: 25px;
         padding: 30px;
         display: grid;
@@ -245,7 +244,7 @@ a {
         color: #0065FC;
 }
 .star2 {
-        color: #e9e9e9;
+        color: #F2F2F2;
 }
 .plushebergement {
         font-weight: bold;
@@ -256,7 +255,7 @@ a {
         row-gap: 30px;
         align-items: center;
        grid-template-rows: auto repeat(3, 1fr);
-        background-color: #e9e9e9;
+        background-color: #F2F2F2;
         border-radius: 28px;
         padding: 30px;
 }
